clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/target_is_raw_pointer/target_is_raw_pointer.cbs
// RUN: %clang_cc1 -verify %s

struct N {
  int b;
  int *owned c;
};

struct M {
  int *a;
  struct N *n;
};

struct K {
  int *_Borrow p;
};

void use_mut(int *_Borrow p) {}

void test() {
  int a = 5;
  int *_Borrow p1 = &_Mut a;
  int *_Borrow p2 = &_Mut a;
  struct K k = { .p = &_Mut a }; // expected-note {{`a` is borrowed here}}
                                // expected-note@-1 {{`a` is borrowed here}}
  int *owned o = (int* owned)&a; // expected-error {{cannot use `a` because it was mutably borrowed}}
  {
    struct N n = { .b = 5, .c = o  };
    struct M m = { .a = &a, .n = &n }; // expected-error {{cannot use `a` because it was mutably borrowed}}
    p1 = &_Mut *m.a;
    p2 = &_Mut m.n->b;
    k.p = &_Mut *m.n->c;
    int *d = (int *)n.c;
  }
  use_mut(p1);
  use_mut(k.p);
  use_mut(p2);
}

int main() {
  test();
  return 0;
}